--- a/example.env
+++ b/example.env
@@ -1,6 +1,7 @@
-DB_HOST=SECRET
-DB_NAME=SECRET
-DB_PASSWORD=SECRET
-DB_USER=SECRET
-PORT=SECRET
-HOST=SECRET
+DB_HOST='localhost'
+DB_NAME='nycMortality'
+DB_PASSWORD=''
+DB_USER=YOUR-POSTGRES-USERNAME
+PORT='5000'
+HOST='localhost'
+
